--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,5 @@
 email=devopstrainingblr@gmail.com
-#always-auth=true
+always-auth=true
 #_auth=YWRtaW46YWRtaW4xMjM0=
 //registry.npmjs.org/:_auth=YWRtaW46YWRtaW4xMjM0
 allowRepublish=true
